# dicom_mask

./: LICENSE  README.md  main.py  requirements.txt  setup.cfg  setup.py
dicom_mask/: convert.py
src/dicom_mask/: __init__.py  convert.py  main.py
