[metadata]
name = dicom-mask-Abe404
version = 0.0.5
author = Abraham George Smith
author_email = abe@abesmith.com
description = Export structure from dicom to numpy binary mask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Abe404/dicom_mask
project_urls =
    Bug Tracker = https://github.com/Abe404/dicom_mask/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
