[metadata]
name = dicom-mask
version = 0.0.9
author = Abraham George Smith
author_email = abe@abesmith.co.uk
description = Export structure from dicom to numpy binary mask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Abe404/dicom_mask
project_urls =
    Bug Tracker = https://github.com/Abe404/dicom_mask/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
install_requires =
    dicompyler-core ==0.5.5
    numpy ==1.21.0
    pydicom ==2.2.0.dev0
    scikit-image ==0.18.2

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
